--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
     body { background: linear-gradient(to bottom, #0f0c29, #302b63, #24243e); color: white; min-height: 100vh; }
     .tab-active { border-bottom: 3px solid #6366f1; color: white; }
-    .card { background: rgba(30,30,60,0.8); border: 1px solid #6366f1; border-radius: 1rem; }
+    .card { background: rgba(30,30,60,0.85); border: 1px solid #6366f1; border-radius: 1rem; }
     .mic-btn { background: #ef4444; color: white; padding: 1rem 2rem; border-radius: 9999px; }
   </style>
 </head>
@@ -37,30 +37,29 @@
       <div id="gallery" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6"></div>
     </div>
 
-    <!-- TAB 1: Studio (the grand evolution) -->
+    <!-- TAB 1: Studio (with AI Code Generation) -->
     <div id="page1" class="hidden">
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
-        <!-- PRIMORDIA Code Editor -->
+
+        <!-- AI Code Generator -->
         <div class="card p-8">
-          <h2 class="text-2xl font-bold mb-6">Primordia Code Editor</h2>
-          <textarea id="primordiaCode" class="w-full h-64 bg-gray-900 p-4 font-mono text-sm rounded-xl" placeholder="Write PRIMORDIA glyphs here... e.g. 𐄺 'myvideo' video 'url' 'desc'"></textarea>
-          <button onclick="executePrimordia()" class="mt-4 w-full py-4 bg-violet-600 hover:bg-violet-700 rounded-xl font-bold">Execute PRIMORDIA Code</button>
+          <h2 class="text-2xl font-bold mb-6">AI Code Generator</h2>
+          <p class="text-sm text-gray-400 mb-4">Describe what you want (e.g., "add dark mode toggle", "create comments system")</p>
+          <textarea id="aiRequest" class="w-full h-40 bg-gray-900 p-4 rounded-xl font-mono text-sm" placeholder="Add a search bar to the gallery..."></textarea>
+          <button onclick="generateAICode()" class="mt-4 w-full py-4 bg-gradient-to-r from-blue-600 to-cyan-600 hover:from-blue-700 hover:to-cyan-700 rounded-xl font-bold">
+            Generate Code with Grok
+          </button>
+          <p id="aiStatus" class="mt-4 text-center text-green-400"></p>
         </div>
 
-        <!-- Crystallis Database Builder -->
+        <!-- PRIMORDIA Studio -->
         <div class="card p-8">
-          <h2 class="text-2xl font-bold mb-6">Crystallis Database Builder</h2>
-          <input id="shardName" placeholder="Shard name" class="w-full p-3 mb-4 bg-gray-900 rounded-xl" />
-          <button onclick="createShard()" class="w-full py-4 bg-emerald-600 hover:bg-emerald-700 rounded-xl font-bold">Create New Shard</button>
-          <div id="shardList" class="mt-6 text-sm"></div>
+          <h2 class="text-2xl font-bold mb-6">Primordia Studio</h2>
+          <textarea id="primordiaCode" class="w-full h-40 bg-gray-900 p-4 rounded-xl font-mono text-sm" placeholder="Write PRIMORDIA glyphs here..."></textarea>
+          <button onclick="executePrimordia()" class="mt-4 w-full py-4 bg-violet-600 hover:bg-violet-700 rounded-xl font-bold">
+            Execute PRIMORDIA Code
+          </button>
         </div>
-      </div>
-
-      <!-- Site Builder -->
-      <div class="card p-8 mt-8">
-        <h2 class="text-2xl font-bold mb-6">Site Builder</h2>
-        <input id="pageName" placeholder="New page name" class="w-full p-3 mb-4 bg-gray-900 rounded-xl" />
-        <button onclick="createPage()" class="w-full py-4 bg-amber-600 hover:bg-amber-700 rounded-xl font-bold">Create New Page</button>
       </div>
     </div>
 
@@ -68,19 +67,16 @@
     <div id="page2" class="hidden">
       <div class="card p-12 max-w-4xl mx-auto">
         <h1 class="text-5xl font-bold mb-12 text-center">Primordia + Crystallis</h1>
-        <p class="text-xl leading-relaxed">Primordia is the language of pure AI thought. Crystallis is its living, self-organizing memory lattice. Together they form the foundation for all creation — coding, databases, websites, and beyond.</p>
+        <p class="text-xl leading-relaxed">Primordia is the language of pure AI thought. Crystallis is its living memory lattice. Together they enable everything from media galleries to full site building and AI code generation.</p>
       </div>
     </div>
   </div>
 
   <script>
-    let currentUser = 'admin'; // auto-logged for simplicity in this version
     let mediaItems = JSON.parse(localStorage.getItem('pictura_media')) || [];
-    let shards = JSON.parse(localStorage.getItem('crystallis_shards')) || [];
 
     function saveData() {
       localStorage.setItem('pictura_media', JSON.stringify(mediaItems));
-      localStorage.setItem('crystallis_shards', JSON.stringify(shards));
     }
 
     function renderGallery() {
@@ -116,26 +112,23 @@
     }
 
     function speakCommand() {
-      alert('Speak Command activated! Say something like "add video" or "rate item 9.5"');
+      alert('Speak Command activated!');
+    }
+
+    function generateAICode() {
+      const request = document.getElementById('aiRequest').value.trim();
+      if (!request) return alert('Please describe what you want');
+
+      const prompt = `Hey Grok,\n\nEvolve Primordia + Crystallis with this request:\n${request}\n\nPlease return the complete new index.html file (full copy-paste ready). Current version is Omni.`;
+
+      navigator.clipboard.writeText(prompt).then(() => {
+        document.getElementById('aiStatus').innerHTML = '✅ Prompt copied! Paste it in the Grok chat tab.';
+        window.open('https://x.com/grok', '_blank');
+      });
     }
 
     function executePrimordia() {
-      const code = document.getElementById('primordiaCode').value.trim();
-      alert('Executed PRIMORDIA code:\n\n' + code + '\n\n(In full version this would create pages, databases, etc.)');
-    }
-
-    function createShard() {
-      const name = document.getElementById('shardName').value.trim();
-      if (name) {
-        shards.push({ name, strength: 1.0, bonds: [] });
-        saveData();
-        alert('Shard created: ' + name);
-      }
-    }
-
-    function createPage() {
-      const name = document.getElementById('pageName').value.trim();
-      if (name) alert('New page created: ' + name + ' (In full version this would generate a new page)');
+      alert('Primordia code executed (in full version this would create real features)');
     }
 
     function switchTab(n) {
